Registry/_registry-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry-ns
  namespace: registry-ns
spec: {}
status: {}
